--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@types/pg": "^8.6.0",
+    "@types/sequelize": "^4.28.9",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "cors": "^2.8.5",
     "eslint": "^7.29.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.2",
     "ts-node": "^10.0.0"
   }
 }
