--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/pg": "^8.6.0",
     "@types/sequelize": "^4.28.9",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "cors": "^2.8.5",
@@ -33,6 +34,8 @@
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
-    "ts-node": "^10.0.0"
+    "socket.io": "^4.1.2",
+    "ts-node": "^10.0.0",
+    "worker-threads": "^1.0.0"
   }
 }
