--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "@types/pg": "^8.6.0",
@@ -36,6 +37,7 @@
     "sequelize": "^6.6.2",
     "socket.io": "^4.1.2",
     "ts-node": "^10.0.0",
+    "uuid": "^8.3.2",
     "worker-threads": "^1.0.0"
   }
 }
