--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,12 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": [
+      "es2015"
+    ]
   },
-  "lib": ["es2015"],
+  "lib": ["es2016"],
   "exclude": [
     "node_modules",
     "dist"
