--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,18 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "es2020",
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
     "lib": [
-      "es2015"
+      "es2020"
     ]
   },
-  "lib": ["es2016"],
+  "lib": ["es2020"],
   "exclude": [
     "node_modules",
     "dist"
-  ]
+  ],
+  "noImplicitAnyForClassMembers": false
 }
